--- a/.gitconfig
+++ b/.gitconfig
@@ -42,3 +42,6 @@
 # http://rentzsch.tumblr.com/post/564806957/public-but-hackable-git-submodules
 [url "git@github.com:dieterreuter/"]
   insteadOf = "git://github.com/dieterreuter/"
+[user]
+	email = dieter.reuter@me.com
+	name = Dieter Reuter
